# celloapi2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
cello_api/: celloapi.py
celloapi2/: __init__.py  celloapi.py
docs/: celloapi2.rst  conf.py  index.rst  modules.rst
example_data/: and_activity.csv  and_logic.csv  and_outputNetlist.json  custom_input.input.json  example_scan.py
tests/: test_celloapi.py
