[tool.poetry]
name = "celloapi2"
version = "0.2.1"
description = ""
authors = ["W.R. Jackson <jackson@justjackson.dev>"]
packages = [
    { include="celloapi2", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
PyYAML = "^5.4.1"
black = "^20.8b1"
pytest = "^6.2.2"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
